--- a/css/creative.css
+++ b/css/creative.css
@@ -14,18 +14,18 @@ body {
 hr {
   max-width: 50px;
   border-width: 3px;
-  border-color: #F05F40; }
+  border-color: #1a75ff; }
 
 hr.light {
   border-color: white; }
 
 a {
-  color: #F05F40;
+  color: #1a75ff;
   -webkit-transition: all 0.2s;
   -moz-transition: all 0.2s;
   transition: all 0.2s; }
   a:focus, a:hover {
-    color: #f05f40; }
+    color: #1975ff; }
 
 h1,
 h2,
@@ -41,7 +41,7 @@ p {
   margin-bottom: 20px; }
 
 .bg-primary {
-  background-color: #F05F40 !important; }
+  background-color: #1a75ff !important; }
 
 .bg-dark {
   color: white;
@@ -87,10 +87,10 @@ body {
   #mainNav .navbar-brand {
     font-weight: 700;
     text-transform: uppercase;
-    color: #F05F40;
+    color: #1a75ff;
     font-family: 'Open Sans', 'Helvetica Neue', Arial, sans-serif; }
     #mainNav .navbar-brand:focus, #mainNav .navbar-brand:hover {
-      color: #f05f40; }
+      color: #1975ff; }
   #mainNav .navbar-toggle {
     font-size: 12px;
     font-weight: 700;
@@ -104,10 +104,10 @@ body {
     color: #222222; }
     #mainNav .navbar-nav > li.nav-item > a.nav-link:focus:hover,
     #mainNav .navbar-nav > li.nav-item > a.nav-link:hover {
-      color: #F05F40; }
+      color: #1a75ff; }
     #mainNav .navbar-nav > li.nav-item > a.nav-link:focus.active,
     #mainNav .navbar-nav > li.nav-item > a.nav-link.active {
-      color: #F05F40 !important;
+      color: #1a75ff !important;
       background-color: transparent; }
       #mainNav .navbar-nav > li.nav-item > a.nav-link:focus.active:hover,
       #mainNav .navbar-nav > li.nav-item > a.nav-link.active:hover {
@@ -131,15 +131,15 @@ body {
         background-color: white; }
         #mainNav.navbar-shrink .navbar-brand {
           font-size: 16px;
-          color: #F05F40; }
+          color: #1a75ff; }
           #mainNav.navbar-shrink .navbar-brand:focus, #mainNav.navbar-shrink .navbar-brand:hover {
-            color: #f05f40; }
+            color: #1975ff; }
         #mainNav.navbar-shrink .navbar-nav > li.nav-item > a.nav-link,
         #mainNav.navbar-shrink .navbar-nav > li.nav-item > a.nav-link:focus {
           color: #222222; }
           #mainNav.navbar-shrink .navbar-nav > li.nav-item > a.nav-link:hover,
           #mainNav.navbar-shrink .navbar-nav > li.nav-item > a.nav-link:focus:hover {
-            color: #F05F40; } }
+            color: #1a75ff; } }
 
 header.masthead {
   position: relative;
@@ -177,7 +177,7 @@ header.masthead {
       min-height: 600px; }
       header.masthead .header-content {
         position: absolute;
-        top: 30%;
+        top: 50%;
         padding: 0 50px;
         -webkit-transform: translateY(-50%);
         -ms-transform: translateY(-50%);
@@ -217,7 +217,7 @@ header.masthead {
     text-align: center;
     opacity: 0;
     color: white;
-    background: rgba(240, 95, 64, 0.9);
+    background: rgba(26, 117, 255, 0.9);
     -webkit-transition: all 0.2s;
     -moz-transition: all 0.2s;
     transition: all 0.2s; }
@@ -253,7 +253,7 @@ header.masthead {
     margin: 0 auto 20px; }
 
 .text-primary {
-  color: #F05F40 !important; }
+  color: #1a75ff !important; }
 
 .no-gutter > [class*='col-'] {
   padding-right: 0;
@@ -298,28 +298,28 @@ header.masthead {
 
 .btn-primary {
   color: white;
-  border-color: #F05F40;
-  background-color: #F05F40; }
+  border-color: #1a75ff;
+  background-color: #1a75ff; }
   .btn-primary.focus, .btn-primary:focus {
     color: white;
-    border-color: #a4270d;
-    background-color: #eb3812; }
+    border-color: #003d9a;
+    background-color: #005be6; }
   .btn-primary:hover {
     color: white;
-    border-color: #e13612;
-    background-color: #eb3812; }
+    border-color: #0057dc;
+    background-color: #005be6; }
   .btn-primary.active, .btn-primary:active,
   .open > .btn-primary.dropdown-toggle {
     color: white;
-    border-color: #e13612;
-    background-color: #eb3812; }
+    border-color: #0057dc;
+    background-color: #005be6; }
     .btn-primary.active.focus, .btn-primary.active:focus, .btn-primary.active:hover, .btn-primary:active.focus, .btn-primary:active:focus, .btn-primary:active:hover,
     .open > .btn-primary.dropdown-toggle.focus,
     .open > .btn-primary.dropdown-toggle:focus,
     .open > .btn-primary.dropdown-toggle:hover {
       color: white;
-      border-color: #a4270d;
-      background-color: #c93110; }
+      border-color: #003d9a;
+      background-color: #004dc2; }
   .btn-primary.active, .btn-primary:active,
   .open > .btn-primary.dropdown-toggle {
     background-image: none; }
@@ -327,10 +327,10 @@ header.masthead {
   fieldset[disabled] .btn-primary.focus,
   fieldset[disabled] .btn-primary:focus,
   fieldset[disabled] .btn-primary:hover {
-    border-color: #F05F40;
-    background-color: #F05F40; }
+    border-color: #1a75ff;
+    background-color: #1a75ff; }
   .btn-primary .badge {
-    color: #F05F40;
+    color: #1a75ff;
     background-color: white; }
 
 .btn {
@@ -342,3 +342,69 @@ header.masthead {
 
 .btn-xl {
   padding: 15px 30px; }
+
+@media (min-width: 768px) {
+  header.masthead .header-content .header-content-inner {
+    max-width: 50%; } }
+
+nav#mainNav .navbar-brand img {
+  margin: -15px -11px 0;
+  height: 36px;
+  transition: visibility 200ms; }
+
+nav#mainNav a img#white {
+  display: none;
+  visibility: hidden; }
+
+nav#mainNav a:hover img#grey {
+  display: none;
+  visibility: hidden; }
+
+nav#mainNav a:hover img#white {
+  display: inline-block;
+  visibility: visible; }
+
+nav#mainNav a img#orange {
+  display: none;
+  visibility: hidden; }
+
+nav#mainNav.navbar-shrink a img#grey,
+nav#mainNav.navbar-shrink a img#white {
+  display: none;
+  visibility: hidden; }
+
+nav#mainNav.navbar-shrink a img#orange {
+  display: inline-block;
+  visibility: visible; }
+
+nav#mainNav a div {
+  margin-top: 10px;
+  display: inline-block;
+  font-size: 30px; }
+
+@media (max-width: 768px) {
+  nav#mainNav a.navbar-brand {
+    text-align: right; }
+  nav#mainNav a div {
+    font-size: 20px; }
+  nav#mainNav a > div {
+    display: block; }
+  nav#mainNav a div {
+    margin-top: -10px; }
+  nav#mainNav a img#orange {
+    margin: -10px -8px 0;
+    height: 25px; } }
+
+@media (max-width: 991px) {
+  nav#mainNav a img#white, nav#mainNav a:hover img#white,
+  nav#mainNav a img#grey, nav#mainNav a:hover img#grey {
+    display: none;
+    visibility: hidden; }
+  nav#mainNav a img#orange {
+    display: inline;
+    visibility: visible; } }
+
+h1#homeHeading {
+  filter: progid:DXImageTransform.Microsoft.Shadow(color=#0000FF,direction=45);
+  text-shadow: 0.2rem 0.2rem 0.2rem black;
+  margin-bottom: 50px; }
