--- a/scss/creative.scss
+++ b/scss/creative.scss
@@ -10,6 +10,7 @@
 
 hr {
   margin-top: 4rem;
+  margin-bottom: 2rem;
 }
 
 @media (min-width: 768px) {
@@ -74,3 +75,5 @@ h1#homeHeading {
   text-shadow: 0.2rem 0.2rem 0.2rem black;
   margin-bottom: 50px;
 }
+
+a#get-in-touch { margin-top: 2rem; }
